Fix component preview overflowing width in CSToast component

--- a/cs-ui-demo/src/App.scss
+++ b/cs-ui-demo/src/App.scss
@@ -208,6 +208,7 @@ body,
 	}
 
 	.components-preview {
+		width: 100%;
 		position: relative;
 		flex: 1;
 		display: flex;
